added uv index and styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </form>
     </div>
     <p id= "temperature"> Temperature</p>
+    <p id= "humidity"> Humidity</p>
+    <p id= "windspeed"> Wind Speed</p>
+    <p id= "uvindex"> UV Index</p>
+
+
     <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
