added forecast for 5 days and styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
 <body>
+<h2>WEATHER APP</h2>
+ <div id="pastcities"> 
+   
+</div>
     <div class = "container">
     <form>
         <div class="form-group">
@@ -22,6 +27,50 @@
     <p id= "humidity"> Humidity</p>
     <p id= "windspeed"> Wind Speed</p>
     <p id= "uvindex"> UV Index</p>
+
+    <div class= "row"> 
+        <div id="temp">
+          <p>5 DAYS TEMPERATURE</p>
+          <p>5 DAYS HUMIDITY</p>
+          <P>5 DAYS WIND SPEED</P>
+          <P>5 DAYS UV INDEX</P>
+        </div>
+      
+      <div id= "temp1">
+          <p id= "temperature1"> Temperature</p>
+          <p id= "humidity1"> Humidity</p>
+          <p id= "windspeed1"> Wind Speed</p>
+          <p id= "uvindex1"> UV Index</p>
+        </div>
+          <div id= "temp2">
+            <p id= "temperature2"> Temperature</p>
+            <p id= "humidity2"> Humidity</p>
+            <p id= "windspeed2"> Wind Speed</p>
+            <p id= "uvindex2"> UV Index</p>
+          </div>
+
+            <div id= "temp3">
+              <p id= "temperature3"> Temperature</p>
+              <p id= "humidity3"> Humidity</p>
+              <p id= "windspeed3"> Wind Speed</p>
+              <p id= "uvindex3"> UV Index</p>
+            </div>
+              <div id= "temp4">
+                <p id= "temperature4"> Temperature</p>
+                <p id= "humidity4"> Humidity</p>
+                <p id= "windspeed4"> Wind Speed</p>
+                <p id= "uvindex4"> UV Index</p>
+              </div>
+                <div id= "temp5">
+                  <p id= "temperature5"> Temperature</p>
+                  <p id= "humidity5"> Humidity</p>
+                  <p id= "windspeed5"> Wind Speed</p>
+                  <p id= "uvindex5"> UV Index</p>
+                </div>
+     
+    </div>
+
+   
 
 
     <script src="config.js"></script>
